# ai-bio-researcher

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt  research_config.yaml
ai_models/: openai.py
data_models/: articles_preprocessing.py  research.py  state.py
graph/: articles_preprocessing_graph.py  hypothesis_generation_node.py  knowledge_construction_graph.py  research_data_preparation_graph.py  research_graph.py  tools_execution_graph.py
kg_rag/: rag_provider.py
prompts/: articles_preprocessing_prompts.py  research_data_preparation_prompts.py  research_prompts.py
utils/: api_config_loader.py  pdf.py  yaml_config_loader.py
